--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -37,13 +37,13 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta-upcoming: IGNORE
+:beta-upcoming: INCLUDE
 
 // Set to 'INCLUDE' when the installation images are available.
 
 :beta-testing: IGNORE
 :betarel-current-major: 14
-:betarel-current: 14.2
+:betarel-current: 14.3
 :betarel-vers: RELEASE
 :u-betarel-schedule: https://www.FreeBSD.org/releases/{betarel-current}R/schedule/
 
