Handbook WG - Filesystems: Rework filesystems chapter
PR:			254191
Reviewed by:		arrowd@, bcr@, fernape@, jrm@, ziaee@
Differential Revision:	https://reviews.freebsd.org/D48400
Sponsored by:		Siracusa

--- a/documentation/content/en/books/handbook/disks/_index.adoc
+++ b/documentation/content/en/books/handbook/disks/_index.adoc
@@ -4,7 +4,7 @@ part: Part III. System Administration
 prev: books/handbook/audit
 next: books/handbook/geom
 description: This chapter covers the use of disks and storage media in FreeBSD. This includes SCSI and IDE disks, CD and DVD media, memory-backed disks, and USB storage devices.
-tags: ["storage", "disks", "gpart", "mount", "quotas", "encrypt", "GPT", "cdrecord", "NTFS", "quotas", "swap", "HAST", "CD", "DVD", "resizing", "growing"]
+tags: ["storage", "disks", "gpart", "mount", "quotas", "encrypt", "GPT", "cdrecord", "quotas", "swap", "HAST", "CD", "DVD", "resizing", "growing"]
 showBookMenu: true
 weight: 24
 path: "/books/handbook/disks/"
@@ -1139,88 +1139,6 @@ To format the floppy with FAT, issue:
 The disk is now ready for use.
 To use the floppy, mount it with man:mount_msdosfs[8].
 One can also install and use package:emulators/mtools[] from the Ports Collection.
-
-[[using-ntfs]]
-== Using NTFS Disks
-
-This section explains how to mount NTFS disks in FreeBSD.
-
-NTFS (New Technology File System) is a proprietary journaling file system developed by Microsoft(R).
-It has been the default file system in Microsoft Windows(R) for many years.
-FreeBSD can mount NTFS volumes using a FUSE file system.
-These file systems are implemented as user space programs which interact with the man:fusefs[5] kernel module via a well defined interface.
-
-[.procedure]
-====
-*Procedure: Steps to Mount a NTFS Disk*
-
-. Before using a FUSE file system we need to load the man:fusefs[5] kernel
-module:
-+
-[source,shell]
-....
-# kldload fusefs
-....
-+
-Use man:sysrc[8] to load the module at startup:
-+
-[source,shell]
-....
-# sysrc kld_list+=fusefs
-....
-
-. Install the actual NTFS file system from packages as in the example (see crossref:ports[pkgng-intro,Using pkg for Binary Package Management]) or from ports (see crossref:ports[ports-using,Using the Ports Collection]):
-+
-[source,shell]
-....
-# pkg install fusefs-ntfs
-....
-
-. Last we need to create a directory where the file system will be mounted:
-+
-[source,shell]
-....
-# mkdir /mnt/usb
-....
-
-. Suppose a USB disk is plugged in.  The disk partition information can be viewed with man:gpart[8]:
-+
-[source,shell]
-....
-# gpart show da0
-=>	  63  1953525105  da0 MBR   (932G)
-	  63  1953525105    1 ntfs  (932G)
-....
-
-. We can mount the disk using the following command:
-+
-[source,shell]
-....
-# ntfs-3g /dev/da0s1 /mnt/usb/
-....
-The disk is now ready to use.
-+
-. Additionally, an entry can be added to /etc/fstab:
-+
-[.programlisting]
-....
-/dev/da0s1  /mnt/usb	ntfs mountprog=/usr/local/bin/ntfs-3g,noauto,rw  0 0
-....
-+
-Now the disk can be now mounted with:
-+
-[source,shell]
-....
-# mount /mnt/usb
-....
-
-. The disk can be unmounted with:
-+
-[source,shell]
-....
-# umount /mnt/usb/
-....
-====
 
 [[backup-basics]]
 == Backup Basics
