Handbook/Virtualization: Update link to CBSD documentation
The old link now redirects to the project's GitHub page.

Reported by:	delphij, Tom Rushworth <tom.rushworth@protonmail.com>
Reviewed by:	docs (dbaio)
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D48491

--- a/documentation/content/en/books/handbook/virtualization/_index.adoc
+++ b/documentation/content/en/books/handbook/virtualization/_index.adoc
@@ -2192,7 +2192,7 @@ There are numerous utilities and applications available in ports to help simplif
 | CBSD
 | BSD-2
 | package:sysutils/cbsd[]
-| link:https://www.bsdstore.ru[Documentation]
+| link:https://github.com/cbsd/cbsd/tree/develop/share/docs[Documentation]
 
 | Virt-Manager
 | LGPL-3
