[books][dev-model]: Fix ports status image
Correct tag and macro syntaxes.

Reported by:	bofh@
Fixes:		d7957d161fd

--- a/documentation/content/en/books/dev-model/_index.adoc
+++ b/documentation/content/en/books/dev-model/_index.adoc
@@ -1104,8 +1104,9 @@ When a problem area is sufficiently isolated, most communication would be within
 A "port" is a set of meta-data and patches that are needed to fetch, compile and install correctly an external piece of software on a FreeBSD system.
 The amount of ports has grown at a tremendous rate, as shown by the following figure.
 
-.Number of ports added between 1995 and 2022 [[fig-ports]]
-image::portsstatus.svg
+.Number of ports added between 1995 and 2022
+[[fig-ports]]
+image::portsstatus.svg[Refer to paragraphs below for a screen-reader friendly version.]
 
 crossref:dev-model[fig-ports,image::portsstatus.svg] shows the number of ports available to FreeBSD in the period 1995 to 2022.
 It looks like the curve has first grown exponentially, and then from the middle of 2001 to the middle of 2007 grown linearly at a rate of about 2000 ports/year, before its growth rate gets lower.
