ziaee@ has joined the party!
Onboard new doc comitter Alexander Ziaee (ziaee@) in accordance with our
rites and traditions, while listening to Too Sweet - Macroons Project.
While here, remove a deprecated $FreeBSD$ tag.

(not yet) Approved by: mhorne, carlavilla (mentors)

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -12,7 +12,6 @@
                  translations.  If they haven't then you *will* break the
                  builds for the other languages, and we will poke fun at you
                  in public.
- $FreeBSD$
 ////
 
 // FreeBSD Committers
@@ -3711,6 +3710,10 @@
 :zi-name: Ryan Steinmetz
 :zi-email: zi@FreeBSD.org
 :zi: {zi-name} <{zi-email}>
+
+:ziaee-name: Alexander Ziaee
+:ziaee-email: ziaee@FreeBSD.org
+:ziaee: {ziaee-name} <{ziaee-email}>
 
 :zirias-name: Felix Palmen
 :zirias-email: zirias@FreeBSD.org
