[handbook][ru]: Fix double tag identifier
Used in disks/ and basic/ chapters

--- a/documentation/content/ru/books/handbook/disks/_index.adoc
+++ b/documentation/content/ru/books/handbook/disks/_index.adoc
@@ -69,7 +69,7 @@ endif::[]
 
 * Узнать как настраивать и устанавливать новое ядро FreeBSD (crossref:kernelconfig[kernelconfig, Настройка ядра FreeBSD]).
 
-[[disks-naming]]
+[[disk-naming]]
 == Имена устройств
 
 Далее приводится список физических устройств хранения информации, которые поддерживаются во FreeBSD, и имена устройств, которые им соответствуют.
