--- a/documentation/content/en/articles/vinum/_index.adoc
+++ b/documentation/content/en/articles/vinum/_index.adoc
@@ -66,6 +66,12 @@ In addition to supporting various cards and controllers for hardware Redundant A
 
 This chapter provides an overview of potential problems with traditional disk storage, and an introduction to the [.filename]#vinum# volume manager.
 
+[WARNING]
+====
+vinum is deprecated and is not present in FreeBSD 15.0 and later.
+Users are advised to migrate to man:gconcat[8], man:gmirror[8], man:gstripe[8], man:graid[8], or man:zfs[8].
+====
+
 [NOTE]
 ====
 Starting with FreeBSD 5, [.filename]#vinum# has been rewritten to fit into the extref:{handbook}[GEOM architecture, geom], while retaining the original ideas, terminology, and on-disk metadata.
